--- a/package.json
+++ b/package.json
@@ -35,6 +35,11 @@
     "watch": "^0.18.0"
   },
   "dependencies": {
-    "ali-oss": "^4.4.2"
+    "ali-oss": "^4.4.2",
+    "async": "^2.0.0-rc.4",
+    "is-there": "^4.3.2",
+    "lodash": "^4.12.0",
+    "moment": "^2.13.0",
+    "walk": "^2.3.9"
   }
 }
