--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "babel src --out-dir dst",
     "pretest": "npm run build",
-    "test": "node test",
+    "test": "standard && node test",
     "test:watch": "watch 'npm run test' src",
     "prepublish": "npm run build"
   },
@@ -23,8 +23,12 @@
     "url": "https://github.com/jackytck/ali-oss-extra/issues"
   },
   "homepage": "https://github.com/jackytck/ali-oss-extra#readme",
+  "standard": {
+    "parser": "babel-eslint"
+  },
   "devDependencies": {
     "babel-cli": "^6.8.0",
+    "babel-eslint": "^6.0.4",
     "babel-plugin-syntax-async-functions": "^6.8.0",
     "babel-plugin-transform-runtime": "^6.8.0",
     "babel-polyfill": "^6.8.0",
@@ -32,6 +36,7 @@
     "babel-preset-stage-0": "^6.5.0",
     "dotenv": "^2.0.0",
     "node-notifier": "^4.5.0",
+    "standard": "^7.1.0",
     "watch": "^0.18.0"
   },
   "dependencies": {
