--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "pretest": "npm run style && npm run build",
     "style": "standard -v src/*.js test/*.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "istanbul cover _mocha --report lcovonly -- -R spec --compilers js:babel-core/register test/*.test.js",
+    "test": "istanbul cover _mocha -- -R spec --compilers js:babel-core/register test/*.test.js",
     "test:quick": "mocha --compilers js:babel-core/register test/*.test.js",
     "test:watch": "watch 'npm run test' src",
     "prepublish": "npm run build"
@@ -40,6 +40,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-stage-0": "^6.5.0",
     "chai": "^3.5.0",
+    "chai-as-promised": "^5.3.0",
     "chai-things": "^0.2.0",
     "coveralls": "^2.11.9",
     "dotenv": "^2.0.0",
