--- a/package.json
+++ b/package.json
@@ -53,9 +53,10 @@
     "watch": "^0.19.1"
   },
   "dependencies": {
-    "babel-runtime": "^6.6.1",
     "ali-oss": "^4.4.4",
     "async": "^2.0.0-rc.4",
+    "babel-runtime": "^6.6.1",
+    "fs-extra-promise": "^0.4.0",
     "is-there": "^4.3.2",
     "lodash": "^4.12.0",
     "moment": "^2.14.0",
