--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "pretest": "npm run style && npm run build",
     "style": "standard -v src/*.js test/*.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "istanbul cover _mocha -- -R spec --compilers js:babel-core/register test/*.test.js",
-    "test:quick": "mocha --compilers js:babel-core/register test/*.test.js",
+    "test": "istanbul cover _mocha -- -R spec --require babel-core/register test/*.test.js",
+    "test:quick": "mocha --require babel-core/register test/*.test.js",
     "test:watch": "watch 'npm run test' src",
     "prepublish": "npm run build"
   },
@@ -33,32 +33,32 @@
   "devDependencies": {
     "babel-cli": "^6.22.0",
     "babel-core": "^6.22.0",
-    "babel-eslint": "^7.0.0",
+    "babel-eslint": "^10.0.2",
     "babel-plugin-syntax-async-functions": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-polyfill": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.22.0",
-    "chai": "^3.5.0",
-    "chai-as-promised": "^6.0.0",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
-    "coveralls": "^2.11.15",
-    "dotenv": "^4.0.0",
+    "coveralls": "^3.0.6",
+    "dotenv": "^8.0.0",
     "istanbul": "1.0.0-alpha.2",
-    "mocha": "^3.0.0",
-    "mocha-lcov-reporter": "^1.2.0",
+    "mocha": "^6.2.0",
+    "mocha-lcov-reporter": "^1.3.0",
     "node-notifier": "^5.0.1",
-    "standard": "^8.0.0",
-    "watch": "^1.0.1"
+    "standard": "^13.1.0",
+    "watch": "^1.0.2"
   },
   "dependencies": {
-    "ali-oss": "^4.8.0",
-    "async": "^2.0.0-rc.4",
-    "babel-runtime": "^6.6.1",
-    "fs-extra-promise": "^0.4.0",
-    "is-there": "^4.3.2",
+    "ali-oss": "^6.1.1",
+    "async": "^3.1.0",
+    "babel-runtime": "^6.26.0",
+    "fs-extra-promise": "^1.0.1",
+    "is-there": "^4.4.4",
     "lodash": "^4.17.0",
     "moment": "^2.16.0",
-    "walk": "^2.3.9"
+    "walk": "^2.3.14"
   }
 }
