--- a/.babelrc
+++ b/.babelrc
@@ -1,10 +1,15 @@
 {
-  "presets": ["es2015", "stage-0"],
+  "presets": [
+    "@babel/preset-env"
+  ],
   "plugins": [
-    ["transform-runtime", {
-      "polyfill": true,
-      "regenerator": true
-    }],
+    [
+      "@babel/plugin-transform-runtime",
+      {
+        "corejs": 2,
+        "regenerator": true
+      }
+    ],
     "syntax-async-functions"
   ]
 }
