--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "pretest": "npm run style && npm run build",
     "style": "standard -v src/*.js test/*.js",
     "coveralls": "cat ./coverage/lcov.info | coveralls",
-    "test": "istanbul cover _mocha -- -R spec --require babel-core/register test/*.test.js",
-    "test:quick": "mocha --require babel-core/register test/*.test.js",
+    "test": "istanbul cover _mocha -- -R spec --require @babel/register test/*.test.js",
+    "test:quick": "mocha --require @babel/register test/*.test.js",
     "test:watch": "watch 'npm run test' src",
     "prepublish": "npm run build"
   },
@@ -31,14 +31,15 @@
     "parser": "babel-eslint"
   },
   "devDependencies": {
-    "babel-cli": "^6.22.0",
-    "babel-core": "^6.22.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-runtime": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/register": "^7.5.5",
+    "@babel/runtime-corejs2": "^7.0.0",
     "babel-eslint": "^10.0.2",
     "babel-plugin-syntax-async-functions": "^6.8.0",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-stage-0": "^6.22.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chai-things": "^0.2.0",
@@ -54,7 +55,6 @@
   "dependencies": {
     "ali-oss": "^6.1.1",
     "async": "^3.1.0",
-    "babel-runtime": "^6.26.0",
     "fs-extra-promise": "^1.0.1",
     "is-there": "^4.4.4",
     "lodash": "^4.17.0",
